# packlm

./: LICENSE  README.md  SPEC.md  anthropic_example.py  packlm.html  packlm.py  packlm_legacy_v1.py  pyproject.toml  students.packlm  test_packlm.py  test_v1.py
documentations/: future_plans.md
packlm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
website/: add.js  index.html  package-lock.json  package.json
website/components/uilayouts/: swapy.jsx
website/src/: App.jsx  index.css
website/src/components/: CodeBlock.jsx  Footer.jsx  Navbar.jsx
website/src/pages/: About.jsx  Blogs.jsx  Changelog.jsx  Converter.jsx  Docs.jsx  Home.jsx  Website.jsx
website/src/utils/: converter.js
