[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "packlm"
version = "1.0.0"
description = "Token-efficient structured data format for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["llm", "tokenization", "data-format", "ai", "nlp", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/packlm"
Repository = "https://github.com/yourusername/packlm"
Issues = "https://github.com/yourusername/packlm/issues"

[project.scripts]
packlm = "packlm:__main__"
